--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://admin:admin123@cluster0.6ziwi3k.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-JWT_SECRET=your_secret_key_here
+MONGO_URI=mongodb+srv://admin:admin123@cluster0.6ziwi3k.mongodb.net/taskmanager?retryWrites=true&w=majority
+JWT_SECRET=mysecret123
